--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="marquee">
-        <p>Este es un texto que se desliza de izquierda a derecha infinitamente, y se mueve lo suficientemente lento para ser leído tranquilamente.</p>
+        <p id="verbo">Loading...</p>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
