--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Texto Deslizante</title>
+    <title>Verbo del Día</title>
 </head>
 <body>
-    <div class="marquee">
-        <p id="verbo">Loading...</p>
+    <div class="container">
+        <div id="dayOfWeek" class="day-of-week">Loading...</div>
+        <h1 id="infinitive">Loading...</h1>
+        <div class="time-tense" id="time-tense">
+            <h2 id="tense-title">Loading...</h2>
+            <div id="conjugations">Loading...</div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
